# whatApp

./: .gitignore  pyproject.toml
whatapp/: chat.py  handlersMessage.py  helper.py  tokenGenerate.py  workBitrix.py  workTelegram.py  workWhatsApp.py
